Bug #40668
mon_osd_report_timeout should not be allowed to be less than 2x the value of osd_beacon_report_interval
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Tags:
low-hanging-fruit
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Monitor
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
We should have a safety built in that will not allow the mon_osd_report_timeout to be set less than a value that is 2x what is set for osd_beacon_report_interval. This will allow for the OSD to miss a beacon and catch it on the next beacon without being marked down by the monitor.
Related issues
History
#1 Updated by Neha Ojha over 3 years ago
- Tags set to low-hanging-fruit
#2 Updated by Neha Ojha over 3 years ago
- Related to Feature #42659: add a health_warn when mon_osd_report_timeout <= mon_osd_report_timeout added
#3 Updated by Neha Ojha over 2 years ago
- Status changed from New to Duplicate
#4 Updated by Neha Ojha over 2 years ago
- Status changed from Duplicate to Resolved
- Backport deleted (
luminous,mimic,nautilus) - Pull request ID set to 33963