mon/OSDMonitor: a safety built to mon_osd_report_timeout

To set mon_osd_report_timeout 2x greater than osd_beacon_report_interval will
allow for the OSD to miss a beacon and catch it on the next beacon without
being marked down by the monitor.

Fixes: https://tracker.ceph.com/issues/40668
Signed-off-by: luo rixin <luorixin@huawei.com>